Fix select height on mobile

--- a/core/sass/components/country-selector/_base.scss
+++ b/core/sass/components/country-selector/_base.scss
@@ -83,6 +83,10 @@
 
 @media (max-width: 640px) {
   .country-selector-dialog {
+    select {
+      height: 49px;
+    }
+
     .select-container,
     .button-container {
       width: 100%;
